src/objects/Format_Types__c.object
<CustomObject>
    <description>This object tracks the title types that are related to a specific title.</description>
    <fields>
        <fullName>BMS_Record_Code__c</fullName>
        <inlineHelpText>BMS record Code</inlineHelpText>
        <label>BMS Record Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Method_s__c</fullName>
        <inlineHelpText>Select the delivery method(s) for this particular format type.</inlineHelpText>
        <label>Delivery Method(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VOD G1</fullName>
                </value>
                <value>
                    <fullName>VOD G2</fullName>
                </value>
                <value>
                    <fullName>VOD Online</fullName>
                </value>
                <value>
                    <fullName>CD-ROM</fullName>
                </value>
                <value>
                    <fullName>DVD</fullName>
                </value>
                <value>
                    <fullName>VHS</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <inlineHelpText>Select the appropriate format for this type</inlineHelpText>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CBT</fullName>
                </value>
                <value>
                    <fullName>VIDEO</fullName>
                </value>
                <value>
                    <fullName>BOOK</fullName>
                </value>
                <value>
                    <fullName>ONLINE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_media__c</fullName>
        <inlineHelpText>ID_media from CTS</inlineHelpText>
        <label>ID_media</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_media_course_format__c</fullName>
        <inlineHelpText>ID_media_course_format from CTS. This is the same value as: ID_media</inlineHelpText>
        <label>ID_media_course_format</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludeInVOD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>IncludeInVOD from BMS</inlineHelpText>
        <label>IncludeInVOD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <inlineHelpText>Select the language for this format and type</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Bahasa</fullName>
                </value>
                <value>
                    <fullName>Brazilian Portuguese</fullName>
                </value>
                <value>
                    <fullName>Chinese Mandarin</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Urdu</fullName>
                </value>
                <value>
                    <fullName>Arabic Subtitles</fullName>
                </value>
                <value>
                    <fullName>Bahasa Subtitles</fullName>
                </value>
                <value>
                    <fullName>Chinese Subtitles</fullName>
                </value>
                <value>
                    <fullName>Croatian Subtitles</fullName>
                </value>
                <value>
                    <fullName>English Subtitles</fullName>
                </value>
                <value>
                    <fullName>Finnish Subtitles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_Code__c</fullName>
        <inlineHelpText>MaterialCode from BMS</inlineHelpText>
        <label>Material Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Format__c</fullName>
        <inlineHelpText>Select the regional format is DVD or Video</inlineHelpText>
        <label>Regional Format</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Format__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PAL</fullName>
                </value>
                <value>
                    <fullName>NTSC</fullName>
                </value>
                <value>
                    <fullName>SECAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <inlineHelpText>Enter the date this particular format was released</inlineHelpText>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status is defaulted to In Production.</description>
        <inlineHelpText>The status is defaulted to In Production, updated to Current when Release Date is entered, and Withdrawn when the Withdrawn Date is entered.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>In Production</fullName>
                    <default>true</default>
                    <label>In Production</label>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtitles__c</fullName>
        <inlineHelpText>Select the Available Subtitles</inlineHelpText>
        <label>Subtitles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARABIC SUBTITLES</fullName>
                </value>
                <value>
                    <fullName>BAHASA SUBTITLES</fullName>
                </value>
                <value>
                    <fullName>CHINESE SUBTITLES</fullName>
                </value>
                <value>
                    <fullName>CROATIAN SUBTITLES</fullName>
                </value>
                <value>
                    <fullName>ENGLISH SUBTITLES</fullName>
                </value>
                <value>
                    <fullName>FINNISH SUBTITLES</fullName>
                </value>
                <value>
                    <fullName>GREEK SUBTITLES</fullName>
                </value>
                <value>
                    <fullName>JAPANESE SUBTITLES</fullName>
                </value>
                <value>
                    <fullName>KOREAN SUBTITLES</fullName>
                </value>
                <value>
                    <fullName>RUSSIAN SUBTITLES</fullName>
                </value>
                <value>
                    <fullName>THAI SUBTITLES</fullName>
                </value>
                <value>
                    <fullName>VIETNAMESE SUBTITLES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>Select the title associated</inlineHelpText>
        <label>Title</label>
        <referenceTo>Titles__c</referenceTo>
        <relationshipName>Title_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Date__c</fullName>
        <inlineHelpText>Enter the date this title format has been withdrawn. Note that when the date is entered the status of the title format will be come withdrawn.</inlineHelpText>
        <label>Withdrawn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>course_id__c</fullName>
        <inlineHelpText>course_id from CTS</inlineHelpText>
        <label>course_id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>course_implementation__c</fullName>
        <inlineHelpText>course_implementation from CTS</inlineHelpText>
        <label>course_implementation</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>media_details_revision__c</fullName>
        <inlineHelpText>media_details__revision from CTS</inlineHelpText>
        <label>media_details__revision</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>media_release_version__c</fullName>
        <inlineHelpText>media__release_version from CTS</inlineHelpText>
        <label>media__release_version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nvod_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>nvod_enabled from CTS</inlineHelpText>
        <label>nvod_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>onlinecourses_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>onlinecourses_enabled</inlineHelpText>
        <label>onlinecourses_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>product_code__c</fullName>
        <inlineHelpText>product__code from CTS</inlineHelpText>
        <label>product__code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_revision__c</fullName>
        <inlineHelpText>product__revision date &amp; Time from CTS</inlineHelpText>
        <label>product__revision</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>product_type__c</fullName>
        <inlineHelpText>product__type from CTS</inlineHelpText>
        <label>product__type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rank_group_Code__c</fullName>
        <inlineHelpText>rank_group__Code from CTS</inlineHelpText>
        <label>rank_group__Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rank_group_Name__c</fullName>
        <inlineHelpText>rank_group__Name
 from CTS</inlineHelpText>
        <label>rank_group__Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>release_version__c</fullName>
        <inlineHelpText>release_version from CTS</inlineHelpText>
        <label>release_version</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vessel_type_Name__c</fullName>
        <inlineHelpText>vessel_type__Name from CTS</inlineHelpText>
        <label>vessel_type__Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vod_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>vod_enabled From CTS</inlineHelpText>
        <label>vod_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>web_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>web_enabled from CTS</inlineHelpText>
        <label>web_enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Format Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>course_id__c</columns>
        <columns>Delivery_Method_s__c</columns>
        <columns>Status__c</columns>
        <columns>Format__c</columns>
        <columns>IncludeInVOD__c</columns>
        <columns>Material_Code__c</columns>
        <columns>media_release_version__c</columns>
        <columns>product_code__c</columns>
        <columns>product_revision__c</columns>
        <columns>ID_media_course_format__c</columns>
        <columns>release_version__c</columns>
        <columns>Regional_Format__c</columns>
        <columns>course_implementation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Format ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Format Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>